design_challenges_01/error2/20190003/11_error.txt
11.c: In function ‘main’:
11.c:15:18: error: ‘ssu_signal’ undeclared (first use in this function)
  signal(SIGUSR1, ssu_signal);
                  ^
11.c:15:18: note: each undeclared identifier is reported only once for each function it appears in
